#4810 partially fixing scrollbar hiding hack bug on mobile browser (but the bottom border is not showing, so a still better solution should be found)
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@39509 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/web-styles.css
+++ b/web/src/geogebra/resources/css/web-styles.css
@@ -60,6 +60,9 @@
 	height: 17px;
 	width: 100%;
 
+	/* on mobile browsers z-index is needed for whatever reason */
+	z-index: 10;
+
 	/* or whatever is the background-color of Algebra View */
 	/* TODO: may be put elsewhere in CSS too */
 	background-color: white;
